Resolves: tdf#154167 ERROR.TYPE(#NULL!) must return 1

Error #NULL! is an alias of FormularError::NoCode Err:521 that is also
mapped to import/export Excel docs. ParameterExpected Err:511 was wrong.

Change-Id: I08dc4e5747cb6c6ab7c2b309b02b942340ed4484
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148820
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins